--- a/fonts.css
+++ b/fonts.css
@@ -15,5 +15,5 @@
 
 @font-face {
     font-family: Balgor;
-    src: url("../c/Balgor.otf") format('truetype');
+    src: url("../c/Balgor.ttf") format('truetype');
 }
