--- a/fonts.css
+++ b/fonts.css
@@ -394,6 +394,6 @@
 }
 
 @font-face {
-    font-family: Cloister Black;
+    font-family: cloister_blacklight;
     src: url("../c/CloisterBlack.ttf") format('truetype');
 }
