--- a/CSS_global.css
+++ b/CSS_global.css
@@ -20,7 +20,7 @@
     --color3: #e6ce46;
     --bgimgcolor: #191919;
     --bgimg: url('https://transparenttextures.com/patterns/3px-tile.png');
-    --header: url('https://i.imgur.com/bJ8SR1H.png');
+    --header: url('https://i.imgur.com/hwDqpqi.png');
     --fond: linear-gradient(180deg, #202020 20%, #202020 80%,#322020);
     --size1: 3.6em;
     --size2: 1em;
