--- a/CSS_global.css
+++ b/CSS_global.css
@@ -30,7 +30,7 @@
     --weight2: 900;
     --font1: 'Staatliches', cursive;
     --font2: 'cloister_blacklight';
-    --font3: 'Nunito Sans', sans-serif;
+    --font3: 'Geist-Regular';
     --font4: 'Cappuccicons';
     --font5: 'a_dripping_markerregular';
 	--font6: 'Cormorant Infant', serif;
