--- a/CSS_global.css
+++ b/CSS_global.css
@@ -30,7 +30,7 @@
     --weight2: 900;
     --font1: 'Staatliches', cursive;
     --font2: 'cloister_blacklight';
-    --font3: 'Geist';
+    --font3: 'Inter';
     --font4: 'Cappuccicons';
     --font5: 'a_dripping_markerregular';
 	--font6: 'Cormorant Infant', serif;
@@ -72,7 +72,7 @@
     --bgimgcolor: #d6d6d8;
     --fond: linear-gradient(180deg, #d7d7d9 20%,#d7d7d9 80%,#82525f);
     --bgimg: url('https://transparenttextures.com/patterns/3px-tile.png');
-    --header: url('https://i.imgur.com/bJ8SR1H.png');
+    --header: url('https://i.imgur.com/9Sk7s2Y.jpeg');
     --transp2: rgba(255,255,255,0.5);
     --transp1: rgba(32, 34, 37, 0.5);
     --transp4: rgb(215 215 217);
