--- a/CSS_global.css
+++ b/CSS_global.css
@@ -15,9 +15,9 @@
     --transp4: rgb(32 32 32);
     --transp5: rgb(12 11 11 / 26%);
     --transp6: rgb(205 205 205 / 35%);
-    --color1: #9060b2;
-    --color2: #c18f70;
-    --color3: #e6ce46;
+    --color1: #8d5151;
+    --color2: #90905c;
+    --color3: #b86531;
     --bgimgcolor: #191919;
     --bgimg: url('https://transparenttextures.com/patterns/3px-tile.png');
     --header: url('https://i.imgur.com/hwDqpqi.png');
@@ -60,9 +60,9 @@
     --pureblack: #f4f4f4;
     --text1: #000;
     --text2: #353535;
-    --color1: #9060b2;
-    --color2: #c18f70;
-    --color3: #e6ce46;
+    --color1: #8d5151;
+    --color2: #90905c;
+    --color3: #b86531;
     --bg1: #e4e4e4;
     --bg2: #ffffff;
     --bg3: #ececec;
