--- a/ccfonts.css
+++ b/ccfonts.css
@@ -12,3 +12,8 @@
     font-family: geist mono;
     src: url("../c/GeistMono-Regular.ttf") format('truetype');
 }
+
+@font-face {
+    font-family: raindrops;
+    src: url("../c/Raindrops.otf") format('truetype');
+}
